--- a/styles/sass/components/_cards.scss
+++ b/styles/sass/components/_cards.scss
@@ -3,6 +3,9 @@
   gap: 40px;
   align-items: center;
   justify-content: center;
+  @media all and (max-width: 768px) {
+    gap: 10px;
+  }
 }
 
 .laser-left-red {
@@ -66,4 +69,17 @@
     height: 10px;
     width: 10px;
     background-color: yellow;
+}
+
+.img-arrow {
+    display: none;
+    @media all and (max-width: 768px) {
+        display: block;
+    }
+}
+
+.img-ship {
+    @media all and (max-width: 768px) {
+        display: none;
+    }
 }
