--- a/styles/sass/pages/_workdetail.scss
+++ b/styles/sass/pages/_workdetail.scss
@@ -4,6 +4,8 @@
   margin: 5vh auto;
   text-align: center;
   font-size: 40px;
+  margin-top: 130px;
+  margin-bottom: 75px;
 }
 
 .container-left-rigth {
@@ -11,19 +13,29 @@
   display: flex;
   justify-content: center;
   gap: 20px;
+  @media all and (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .left {
   width: 45%;
   height: 65vh;
+  @media all and (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .right {
   width: 45%;
   height: 65vh;
   position: relative;
+  @media all and (max-width: 768px) {
+    width: 100%;
+  }
   &__image {
     border-radius: 15%;
+    object-fit: cover;
     img {
       object-fit: cover;
     }
@@ -36,20 +48,11 @@
   justify-content: space-evenly;
   align-items: center;
   margin-top: 30px;
+  @media all and (max-width: 768px) {
+    margin-top: 0px;
+  }
 }
 
-// .threepics {
-//   display: flex;
-//   justify-content: space-evenly;
-//   align-items: center;
-//   width: 100%;
-//   height: 50vh;
-//   position: relative;
-//   &__image {
-//     border-radius: 15%;
-//     width: 30%;
-//   }
-// }
 
 .threepics {
     display: flex;
@@ -57,13 +60,18 @@
     align-items: center;
     gap: 20px;
     width: 100%;
-    height: 50vh;
+    @media all and (max-width: 768px) {
+      flex-direction: column;
+    }
     &__image {
       img {
         object-fit: cover;
         width: 25vw;
         height: 40vh;
         border-radius: 15px;
+        @media all and (max-width: 768px) {
+          width: 80vw;
+        }
       }
     }
   }
