--- a/styles/sass/components/_navbar.scss
+++ b/styles/sass/components/_navbar.scss
@@ -37,6 +37,7 @@
 
 .menu-icon {
   cursor: pointer;
+  display: flex;
   @media all and (min-width: 768px) {
     display: none;
   }
@@ -52,7 +53,6 @@
   gap: 10px;
   padding: 1rem;
   font-size: 20px;
-
   @media all and (min-width: 768px) {
     display: none;
   }
@@ -73,3 +73,82 @@
 .black {
     color: black;
 }
+
+// :root {
+//   --bar-width: 60px;
+//   --bar-height: 8px;
+//   --hamburger-gap: 6px;
+//   --foreground: gold;
+//   --background: red;
+//   --hamburger-margin: 8px;
+//   --animation-timing: 200ms ease-in-out;
+//   --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
+// }
+
+// .hamburger-menu {
+//   --x-width: calc(var(--hamburger-height) * 1.41421356237);
+
+//   display: flex;
+//   flex-direction: column;
+//   gap: var(--hamburger-gap);
+//   width: max-content;
+//   /* position: absolute; */
+//   top: var(--hamburger-margin);
+//   left: var(--hamburger-margin);
+//   z-index: 2;
+//   cursor: pointer;
+//   // @media all and (max-width: 768px){
+//   //   display: none;
+//   // }
+// }
+
+// .hamburger-menu:has(input:checked) {
+//   --foreground: gold;
+//   --background: gold;
+// }
+
+// .hamburger-menu:has(input:focus-visible)::before,
+// .hamburger-menu:has(input:focus-visible)::after,
+// .hamburger-menu input:focus-visible {
+//   border: 1px solid var(--background);
+//   box-shadow: 0 0 0 1px var(--foreground);
+// }
+
+// .hamburger-menu::before,
+// .hamburger-menu::after,
+// .hamburger-menu input {
+//   content: "";
+//   width: var(--bar-width);
+//   height: var(--bar-height);
+//   background-color: var(--foreground);
+//   border-radius: 9999px;
+//   transform-origin: left center;
+//   transition: opacity var(--animation-timing), width var(--animation-timing),
+//     rotate var(--animation-timing), translate var(--animation-timing),
+//     background-color var(--animation-timing);
+// }
+
+// .hamburger-menu input {
+//   appearance: none;
+//   padding: 0;
+//   margin: 0;
+//   outline: none;
+//   pointer-events: none;
+// }
+
+// .hamburger-menu:has(input:checked)::before {
+//   rotate: 45deg;
+//   width: var(--x-width);
+//   translate: 0 calc(var(--bar-height) / -2);
+// }
+
+// .hamburger-menu:has(input:checked)::after {
+//   rotate: -45deg;
+//   width: var(--x-width);
+//   translate: 0 calc(var(--bar-height) / 2);
+// }
+
+// .hamburger-menu input:checked {
+//   opacity: 0;
+//   width: 0;
+// }
