--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -7,6 +7,7 @@
 @import "./sass/utils/buttons";
 @import "./sass/pages/workdetail";
 @import "./sass/pages/home";
+@import "./sass/pages/resume";
 @import "./sass/components/navbar";
 @import "./sass/components/cyp";
 @import "./sass/components/sectiontitle";
@@ -25,5 +26,6 @@
 @import "./sass/components/displaycards";
 @import "./sass/components/contact";
 @import "./sass/components/footer";
+@import "./sass/components/rating";
 @import "./sass/theme/theme";
 @import "./sass/theme/bgetoiles";
