--- a/styles/sass/components/_skills.scss
+++ b/styles/sass/components/_skills.scss
@@ -5,13 +5,14 @@
     justify-content: center;
     align-items: center;
 }
+
+
 .grid {
-    display: grid;
-    position: relative;
-    grid-template-columns: repeat(auto-fill, 75px);
+    display: flex;
     height: auto;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 50px;
     width: 100%;
     margin: 0 auto;
